处理maven阶段一些异常warning